# qdownloader

./: .gitignore  CMakeLists.txt  SConstruct
src/: SConscript  downloader.cpp  downloader.h  httpclient.cpp  httpclient.h
test/: SConscript  main.cpp
